--- a/src/main/resources/templates/client/fragments/navbar.html
+++ b/src/main/resources/templates/client/fragments/navbar.html
@@ -42,7 +42,7 @@
                 <a class="index-nav-title nav-link title-help-text-md" th:href="@{/}">Inicio</a>
             </li>
             <li class="nav-item w-100">
-                <a class="index-nav-title nav-link title-help-text-md" th:href="@{/login}">Mi cuenta</a>
+                <a class="index-nav-title nav-link title-help-text-md" th:href="@{/dashboard}">Mi cuenta</a>
             </li>
             <li class="nav-item w-100">
                 <a class="index-nav-title nav-link title-help-text-md " href="#">Nosotros</a>
@@ -67,7 +67,7 @@
                 <a class="nav-link" th:href="@{/}">Inicio</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" th:href="@{/login}">Mi cuenta</a>
+                <a class="nav-link" th:href="@{/dashboard}">Mi cuenta</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Nosotros</a>
@@ -81,6 +81,39 @@
         </ul>
     </div>
 </nav>
+
+<nav th:fragment="dashboard" class="navbar navbar-expand-lg pt-0 pl-2 pb-0 navbar-dark w-100">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-nav-dropdown-commun"
+            aria-controls="navbar-nav-dropdown-commun" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse rr-flex" id="navbar-nav-dropdown-commun">
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" th:href="@{/}">Inicio</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/dashboard}">Mi cuenta</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Nosotros</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/contact-us}">Contáctanos</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Publicar</a>
+            </li>
+            <li>
+                <a class="nav-link" href="#" onclick="document.forms['logoutForm'].submit()">Logout
+                <form id="logoutForm" method="POST" action="/logout">
+                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                </form></a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
 <div th:fragment="loader" class="loader-wrapper">
     <span class="loader"><span class="loader-inner"></span></span>
 </div>
