--- a/src/main/resources/templates/client/index.html
+++ b/src/main/resources/templates/client/index.html
@@ -34,7 +34,7 @@
                             </div>
                         </div>
                         <div class="d-flex justify-content-center mt-2">
-                            <button class="btn btn-outline-primary" type="submit">Detalles</button>
+                            <button class="btnbtn-outline-primary" type="submit">Detalles</button>
                         </div>
                     </div>
                     <div class="carousel-item">
@@ -70,7 +70,7 @@
             <div class="w-100 h-100 d-flex flex-column align-items-center justify-content-center">
                 <div class="row mt-auto w-100">
                     <div class="offset-md-2 col-md-8 align-text-center">
-                        <form class="d-flex flex-row justify-content-center" th:action="@{/search}" method="post">
+                        <form class="d-flex flex-row justify-content-center" th:action="@{/search}" method="get">
                             <div class="row w-100 pb-md-5">
                                 <div class="col-md-3">
                                     <select id="type"
