--- a/src/main/resources/templates/client/fragments/dashboard.html
+++ b/src/main/resources/templates/client/fragments/dashboard.html
@@ -19,19 +19,19 @@
             <li class="nav-item">
                 <a class="nav-link active" href="#">
                     <i class="material-icons">edit</i>
-                    <span>Profile</span>
+                    <span>Perfil</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link " href="#">
                     <i class="material-icons">note_add</i>
-                    <span>Request</span>
+                    <span>Solicitudes</span>
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link " href="#">
                     <i class="material-icons">person</i>
-                    <span>Personal space</span>
+                    <span>Espacio personal</span>
                 </a>
             </li>
         </ul>
